check registration_id
